native/crates/immich_core_ffi/include/immich_core.h

#pragma once

// Generated by cbindgen. Do not edit.

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

enum ImmichCoreLogLevel
#if __STDC_VERSION__ >= 202311L
  : int32_t
#endif // __STDC_VERSION__ >= 202311L
 {
  ImmichCoreLogLevel_Info = 0,
  ImmichCoreLogLevel_Warning = 1,
  ImmichCoreLogLevel_Severe = 2,
};
#if __STDC_VERSION__ >= 202311L
typedef enum ImmichCoreLogLevel ImmichCoreLogLevel;
#else
typedef int32_t ImmichCoreLogLevel;
#endif // __STDC_VERSION__ >= 202311L

/**
 * Returns the core version as a C string. Free it with `immich_core_free_string`.
 */
char *immich_core_version(void);

/**
 * Releases a string returned by this library. Null is a no-op.
 *
 * # Safety
 * `ptr` must come from this library and must not be freed twice.
 */
void immich_core_free_string(char *ptr);

/**
 * Writes one app log entry unless it is below the app's log level setting.
 * Returns zero on success, nonzero on failure.
 *
 * # Safety
 * String pointers must be null or valid NUL-terminated strings.
 * `level` must be a valid `ImmichCoreLogLevel` variant.
 */
int32_t immich_core_log(const char *app_dir,
                        ImmichCoreLogLevel level,
                        const char *logger,
                        const char *message);

/**
 * Decodes a thumbhash to RGBA. The caller frees the returned buffer with free().
 * Returns null on failure.
 *
 * # Safety
 * `hash` must be null or readable for `len` bytes, at most `isize::MAX`.
 * `width` and `height` must be null or valid writable pointers, outside `hash`.
 */
uint8_t *immich_core_thumbhash(const uint8_t *hash, size_t len, int32_t *width, int32_t *height);